--- a/package.json
+++ b/package.json
@@ -5,13 +5,19 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:dev": "tsx watch src/main.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.10.0",
   "dependencies": {
+    "@fastify/cors": "^11.1.0",
+    "@fastify/swagger": "^9.5.2",
+    "@fastify/swagger-ui": "^5.2.3",
+    "dotenv": "^17.2.3",
+    "fastify": "^5.6.1",
+    "fastify-type-provider-zod": "^6.0.0",
     "parse": "^6.1.1",
     "parse-server": "^8.2.5",
     "zod": "^4.1.12"
@@ -19,6 +25,7 @@
   "devDependencies": {
     "@types/node": "^24.7.2",
     "@types/parse": "^6.1.0",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   }
 }
