feat: create flow to add movie image

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "packageManager": "pnpm@10.10.0",
   "dependencies": {
     "@fastify/cors": "^11.1.0",
+    "@fastify/multipart": "^9.2.1",
     "@fastify/swagger": "^9.5.2",
     "@fastify/swagger-ui": "^5.2.3",
     "dotenv": "^17.2.3",
